# oxidx

./: Cargo.toml  README.es.md  README.md  demo_ui.json  grid_test.oxidx  grid_test.rs  login.json  ui-demo.json
assets/syntax/: js.json  rust.json
docs/: ARCHITECTURE.md  DOC_API.es.md  DOC_API.md  MAKE_GAMES.es.md  MAKE_GAMES.md  STATUS.md  STUDIO_TUTORIAL.es.md  STUDIO_TUTORIAL.md  TUTORIAL.es.md  TUTORIAL.md
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/showcase/: Cargo.toml
oxide_studio/: Cargo.toml
oxide_studio/src/: lib.rs  main.rs
oxide_studio/src/panels/: inspector.rs
oxide_studio_web/: Cargo.toml  README.md  build.sh
oxide_studio_web/.cargo/: config.toml
oxide_studio_web/src/: lib.rs  studio.rs
oxide_studio_web/web/: index.html
oxidx_cli/: Cargo.toml
oxidx_cli/src/: codegen.rs  main.rs  schema.rs
oxidx_cli/tests/: cli_tests.rs
oxidx_codegen/: Cargo.toml
oxidx_codegen/src/: lib.rs  schema.rs  tests.rs  traits.rs  view_generator.rs
oxidx_codegen/src/languages/: rust.rs
oxidx_core/: Cargo.toml
oxidx_core/src/: assets.rs  component.rs  context.rs  engine.rs  events.rs  layout.rs  lib.rs  primitives.rs  renderer.rs  schema.rs  shader.wgsl  shader_batched.wgsl  style.rs  syntax.rs  testing.rs  theme.rs  web_engine.rs
oxidx_core/tests/: headless_tests.rs
oxidx_derive/: Cargo.toml
oxidx_derive/src/: component.rs  lib.rs  widget.rs
oxidx_editor/: Cargo.toml
oxidx_mcp/: Cargo.toml
oxidx_mcp/src/: main.rs
oxidx_ollama/: LoginScreen.rs  oxidx_ollama.py  temp_preview.json
oxidx_std/: Cargo.toml
oxidx_std/src/: button.rs  calendar.rs  charts.rs  checkbox.rs  code_editor.rs  combobox.rs  containers.rs  dialog.rs  dynamic.rs  grid.rs  groupbox.rs  image.rs  input.rs  label.rs  layout_components.rs  lib.rs  listbox.rs  menu.rs  prelude.rs  progress.rs  property_grid.rs  radiobox.rs  scroll.rs  split.rs  textarea.rs  tree.rs
oxidx_std/tests/: engine_integrity.rs  layout_tests.rs
oxidx_viewer/: Cargo.toml
oxidx_viewer/src/: main.rs
