[package]
name = "oxide_studio"
version = "0.1.0"
edition = "2021"
description = "The official IDE for the OxidX Framework"

[[bin]]
name = "oxide-studio"
path = "src/main.rs"

[dependencies]
oxidx_core = { path = "../oxidx_core" }
oxidx_std = { path = "../oxidx_std" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.148"
