[package]
name = "oxidx_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oxidx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
oxidx_codegen = { path = "../oxidx_codegen" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
notify-debouncer-mini = "0.4"
chrono = "0.4"
