[package]
name = "oxidx_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"           # O toml, según prefieras para el archivo de diseño
heck = "0.4"                 # Convierte "CamelCase" a "snake_case" para nombres de variables
quote = "1.0"                # Ayuda a armar código Rust válido
