[package]
name = "oxidx_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
# Graphics and Windows
winit = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }

# Text Rendering
glyphon = "0.5"

# Clipboard
arboard = "3.2"

# Utilities
pollster = "0.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }

# Async Assets
rayon = "1.8"
image = "0.25"

[dev-dependencies]
futures = "0.3"
