[package]
name = "showcase"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
oxidx_core = { path = "../../oxidx_core" }
oxidx_std = { path = "../../oxidx_std" }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
image = "0.25"
serde_json = "1.0"
oxidx_codegen = { path = "../../oxidx_codegen" }
